--- a/style.css
+++ b/style.css
@@ -4,37 +4,6 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
-  width: 500px;
-  margin: 0 auto;
-  display: block;
-  text-align: right;
-}
-.aaa img {
-  width: 100%;
-}
-.aaa .more_inf {
-  font-family: fantasy, cursive;
-}
-
-@media (max-width:768px) {
-  .aaa { 
-    text-align: center;
-  }
-}
-.centered-main-page-element {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-.task-row-wrapper {
-  display: flex;
-}
 ul {
   margin: 0;
   padding: 0px;
@@ -47,7 +16,40 @@ input,
 button{
   outline: none;
 }
-button {
+
+.wrapper{
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+}
+
+.description {
+  text-align: right;
+}
+
+.description__scheme {
+  width: 100%;
+}
+.description__link{
+  font-family: fantasy, cursive;
+}
+
+@media (max-width:768px) {
+  .description { 
+    text-align: center;
+  }
+}
+
+.task {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+}
+.task-row-wrapper {
+  display: flex;
+}
+
+.button-action {
   background: none;
   border: 0px;
   color: #888;
@@ -56,12 +58,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button-action:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for='new-task'] {
+.section-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +71,8 @@ label[for='new-task'] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.edit-input,
+.add-task__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,21 +84,22 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.edit-input:focus,
+.add-task__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.add-task__label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.add-task__input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -105,47 +108,43 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
-  vertical-align: middle;
-}
 
-li > input[type="checkbox"] {
+.task-checkbox{
   margin: 0 10px;
 }
-li > label {
+.task-name {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
-  width: 226px;
-}
-button.delete img {
+
+.button-delete__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button-delete__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.task-name-complete {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+
+.edit-input {
+  width: 226px;
   display: none;
 }
-
-ul li.editMode input[type=text] {
+.edit-active{
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.name-edit {
   display: none;
 }
