--- a/style.css
+++ b/style.css
@@ -119,12 +119,12 @@ button{
   width: 226px;
 }
 
-.button-delete__img {
+.button-action__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.button-delete__img:hover {
+.button-action__img:hover {
   transform: rotateZ(0);
 }
 
